--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,8 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-position">
+        <div>
         <a lang="en" href="./index.html" class="logo-footer"
           ><span class="logo-web">Web</span>Studio</a
         >
@@ -172,13 +173,39 @@
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li">
               <a href="tel:+380961111111" class="footer-link-contact"
                 >+38 096 111 11 11</a
               >
             </li>
           </ul>
         </address>
+        </div>
+        <div class="social-footer">
+        <p class="join">Присоединяйтесь</p>
+        <ul class="social-footer-list">
+          <li class="footer-social-item"><a href="" class="footer-social-link">
+            <svg class="footer-social-icon">
+              <use href="./images/sprite.svg#icon-insta"></use>
+            </svg>
+          </a></li>
+          <li class="footer-social-item"><a href="" class="footer-social-link">
+             <svg class="footer-social-icon">
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a></li>
+          <li class="footer-social-item"><a href="" class="footer-social-link">
+             <svg class="footer-social-icon">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a></li>
+          <li class="footer-social-item"><a href="" class="footer-social-link">
+             <svg class="footer-social-icon">
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+          </a></li>
+        </ul>
+        </div>
       </div>
     </footer>
   </body>
