--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           <li class="site-nav-item">
             <a href="mailto:info@devstudio.com" class="link-contact"
               >
-              <svg class="link-contact-icon">
-                <use href="/images/sprite.svg#icon-letter"></use>
+              <svg class="link-contact-icon" width="16" height="16">
+                <use href="/images/icons.svg#icon-letter"></use>
               </svg>
               <p>info@devstudio.com</p>  
             </a>
@@ -50,8 +50,8 @@
           <li class="site-nav-item">
             <a href="tel:+380961111111" class="link-contact"
               >
-              <svg class="link-contact-icon">
-                <use href="/images/sprite.svg#icon-smartphone"></use>
+              <svg class="link-contact-icon" width="16" height="16">
+                <use href="/images/icons.svg#icon-smartphone"></use>
               </svg> 
               <p>+38 096 111 11 11</p>
             </a>
@@ -75,8 +75,8 @@
           <ul class="about">
             <li class="about-item">
               <div class="about-item-icon">
-                <svg class="about-icon">
-                  <use href="./images/sprite.svg#icon-antenna"></use>
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="overtitle">Внимание к деталям</h3>
@@ -87,8 +87,8 @@
             </li>
             <li class="about-item">
                <div class="about-item-icon">
-                <svg class="about-icon">
-                  <use href="./images/sprite.svg#icon-clock"></use>
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="overtitle">Пунктуальность</h3>
@@ -99,8 +99,8 @@
             </li>
             <li class="about-item">
                <div class="about-item-icon">
-                <svg class="about-icon">
-                  <use href="./images/sprite.svg#icon-diagram"></use>
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="overtitle">Планирование</h3>
@@ -111,8 +111,8 @@
             </li>
             <li class="about-item">
                <div class="about-item-icon">
-                <svg class="about-icon">
-                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="overtitle">Современные технологии</h3>
@@ -152,29 +152,29 @@
                 <ul class="social">
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-insta"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -188,29 +188,29 @@
                 <ul class="social">
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-insta"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -225,29 +225,29 @@
                 <ul class="social">
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-insta"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -262,29 +262,29 @@
                 <ul class="social">
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-insta"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="social-link">
-                      <svg class="social-icon">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -299,43 +299,43 @@
         <ul class="companies">
           <li>
             <a href="" class="companies-item">
-              <svg class="companies-icon">
-                <use href="./images/sprite.svg#icon-logo"></use>
+              <svg class="companies-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="companies-item">
-              <svg class="companies-icon">
-                <use href="./images/sprite.svg#icon-logo2"></use>
+              <svg class="companies-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo2"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="companies-item">
-              <svg class="companies-icon">
-                <use href="./images/sprite.svg#icon-logo3"></use>
+              <svg class="companies-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo3"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="companies-item">
-              <svg class="companies-icon">
-                <use href="./images/sprite.svg#icon-logo4"></use>
+              <svg class="companies-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo4"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="companies-item">
-              <svg class="companies-icon">
-                <use href="./images/sprite.svg#icon-logo5"></use>
+              <svg class="companies-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo5"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="companies-item">
-              <svg class="companies-icon">
-                <use href="./images/sprite.svg#icon-logo6"></use>
+              <svg class="companies-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo6"></use>
               </svg>
             </a>
           </li>
@@ -377,23 +377,23 @@
         <p class="join">Присоединяйтесь</p>
         <ul class="social-footer-list">
           <li class="footer-social-item"><a href="" class="footer-social-link">
-            <svg class="footer-social-icon">
-              <use href="./images/sprite.svg#icon-insta"></use>
+            <svg class="footer-social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-insta"></use>
             </svg>
           </a></li>
           <li class="footer-social-item"><a href="" class="footer-social-link">
-             <svg class="footer-social-icon">
-              <use href="./images/sprite.svg#icon-twitter"></use>
+             <svg class="footer-social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
           </a></li>
           <li class="footer-social-item"><a href="" class="footer-social-link">
-             <svg class="footer-social-icon">
-              <use href="./images/sprite.svg#icon-facebook"></use>
+             <svg class="footer-social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </a></li>
           <li class="footer-social-item"><a href="" class="footer-social-link">
-             <svg class="footer-social-icon">
-              <use href="./images/sprite.svg#icon-linkedin"></use>
+             <svg class="footer-social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
           </a></li>
         </ul>
