--- a/portfolio.html
+++ b/portfolio.html
@@ -26,27 +26,35 @@
         >
         <nav>
           <ul class="site-nav">
-            <li class="item">
+            <li class="site-nav-item">
               <a href="./index.html" class="link-nav">Студия</a>
             </li>
-            <li class="item">
+            <li class="site-nav-item">
               <a href="./portfolio.html" class="link-nav current">Портфолио</a>
             </li>
-            <li class="item">
+            <li class="site-nav-item">
               <a href="" class="link-nav">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="site-nav auth-nav">
-          <li class="item">
+          <li class="site-nav-item">
             <a href="mailto:info@devstudio.com" class="link-contact"
-              >info@devstudio.com</a
-            >
+              >
+              <svg class="link-contact-icon" width="16" height="16">
+                <use href="/images/icons.svg#icon-letter"></use>
+              </svg>
+              <p>info@devstudio.com</p>  
+            </a>
           </li>
-          <li class="item">
+          <li class="site-nav-item">
             <a href="tel:+380961111111" class="link-contact"
-              >+38 096 111 11 11</a
-            >
+              >
+              <svg class="link-contact-icon" width="16" height="16">
+                <use href="/images/icons.svg#icon-smartphone"></use>
+              </svg> 
+              <p>+38 096 111 11 11</p>
+            </a>
           </li>
         </ul>
       </div>
@@ -74,13 +82,16 @@
           </ul>
           <ul class="portfolio-work">
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio1.jpg" alt="Технокряк" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title">Технокряк</h2>
                 <p class="work-description">Веб-сайт</p>
               </div>
+              </a>
             </li>
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio2.jpg" alt="Постер" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title">
@@ -88,8 +99,10 @@
                 </h2>
                 <p class="work-description">Дизайн</p>
               </div>
+              </a>
             </li>
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio3.jpg" alt="Ресторан" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title">
@@ -97,22 +110,28 @@
                 </h2>
                 <p class="work-description">Приложение</p>
               </div>
+              </a>
             </li>
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio4.jpg" alt="Наушники" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title">Проект <span lang="en">Prime</span></h2>
                 <p class="work-description">Маркетинг</p>
               </div>
+              </a>
             </li>
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio5.jpg" alt="Коробки" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title">Проект <span lang="en">Boxes</span></h2>
                 <p class="work-description">Приложение</p>
               </div>
+              </a>
             </li>
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio6.jpg" alt="Монитор" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title">
@@ -120,8 +139,10 @@
                 </h2>
                 <p class="work-description">Веб-сайт</p>
               </div>
+              </a>
             </li>
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio7.jpg" alt="Журнал" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title">
@@ -129,15 +150,19 @@
                 </h2>
                 <p class="work-description">Дизайн</p>
               </div>
+              </a>
             </li>
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio8.jpg" alt="Бирка" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title">Проект <span lang="en">LAB</span></h2>
                 <p class="work-description">Маркетинг</p>
               </div>
+              </a>
             </li>
             <li class="work-card">
+              <a href="" class="work-card-link">
               <img src="./images/portfolio9.jpg" alt="Ноутбук" width="370" />
               <div class="work-card-item">
                 <h2 class="work-title" work>
@@ -145,6 +170,7 @@
                 </h2>
                 <p class="work-description">Приложение</p>
               </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -185,23 +211,23 @@
         <p class="join">Присоединяйтесь</p>
         <ul class="social-footer-list">
           <li class="footer-social-item"><a href="" class="footer-social-link">
-            <svg class="footer-social-icon">
-              <use href="./images/sprite.svg#icon-insta"></use>
+            <svg class="footer-social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-insta"></use>
             </svg>
           </a></li>
           <li class="footer-social-item"><a href="" class="footer-social-link">
-             <svg class="footer-social-icon">
-              <use href="./images/sprite.svg#icon-twitter"></use>
+             <svg class="footer-social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
           </a></li>
           <li class="footer-social-item"><a href="" class="footer-social-link">
-             <svg class="footer-social-icon">
-              <use href="./images/sprite.svg#icon-facebook"></use>
+             <svg class="footer-social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </a></li>
           <li class="footer-social-item"><a href="" class="footer-social-link">
-             <svg class="footer-social-icon">
-              <use href="./images/sprite.svg#icon-linkedin"></use>
+             <svg class="footer-social-icon" width="20" height="20">
+              <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
           </a></li>
         </ul>
