--- a/index.html
+++ b/index.html
@@ -42,18 +42,16 @@
             <a href="mailto:info@devstudio.com" class="link-contact"
               >
               <svg class="link-contact-icon" width="16" height="16">
-                <use href="/images/icons.svg#icon-letter"></use>
-              </svg>
-              <p>info@devstudio.com</p>  
+                <use href="./images/icons.svg#icon-letter"></use>
+              </svg>info@devstudio.com  
             </a>
           </li>
           <li class="site-nav-item">
             <a href="tel:+380961111111" class="link-contact"
               >
               <svg class="link-contact-icon" width="16" height="16">
-                <use href="/images/icons.svg#icon-smartphone"></use>
-              </svg> 
-              <p>+38 096 111 11 11</p>
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11
             </a>
           </li>
         </ul>
@@ -150,28 +148,28 @@
                 <h3 class="name-title">Игорь Демьяненко</h3>
                 <p class="position-title" lang="en">Product Designer</p>
                 <ul class="social">
-                  <li>
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-insta"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="social-icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -294,7 +292,8 @@
           </ul>
         </div>
       </section>
-      <section class="section container">
+      <section class="section">
+        <div class="container">
         <h2 class="title">Постоянные клиенты</h2>
         <ul class="companies">
           <li>
@@ -340,6 +339,7 @@
             </a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
