--- a/portfolio.html
+++ b/portfolio.html
@@ -42,18 +42,16 @@
             <a href="mailto:info@devstudio.com" class="link-contact"
               >
               <svg class="link-contact-icon" width="16" height="16">
-                <use href="/images/icons.svg#icon-letter"></use>
-              </svg>
-              <p>info@devstudio.com</p>  
+                <use href="./images/icons.svg#icon-letter"></use>
+              </svg>info@devstudio.com  
             </a>
           </li>
           <li class="site-nav-item">
             <a href="tel:+380961111111" class="link-contact"
               >
               <svg class="link-contact-icon" width="16" height="16">
-                <use href="/images/icons.svg#icon-smartphone"></use>
-              </svg> 
-              <p>+38 096 111 11 11</p>
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11
             </a>
           </li>
         </ul>
