--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
           <h1 class="visually-hidden">Примеры работ</h1>
           <ul class="portfolio-btn">
             <li class="overbtn">
-              <button class="overbtn-item" type="button">Все</button>
+              <button class="overbtn-item overbtn-item-main" type="button">Все</button>
             </li>
             <li class="overbtn">
               <button class="overbtn-item" type="button">Веб-сайты</button>
